new image for the homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <img src="https://via.placeholder.com/1200x300?text=Banner+Image" alt="Banner" style="width:100%;max-width:1200px;height:auto;display:block;margin-bottom:2rem;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);">
     <h1>Welcome to My Homepage!</h1>
     <button class="contact-btn" onclick="alert('Contact form coming soon!')">Contact Me</button>
 </body>
