new images added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,39 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/banner.jpg" alt="Banner" class="banner-image" loading="lazy">
-    <h1>Welcome to My Homepage!</h1>
-    <button class="contact-btn" onclick="alert('Contact form coming soon!')">Contact Me</button>
+    <header class="site-header">
+        <div class="logo">
+            <div class="animated-elf">
+                <div class="elf-head">
+                    <div class="elf-ear left-ear"></div>
+                    <div class="elf-ear right-ear"></div>
+                    <div class="elf-face">
+                        <div class="elf-eye left-eye"></div>
+                        <div class="elf-eye right-eye"></div>
+                        <div class="elf-nose"></div>
+                        <div class="elf-mouth"></div>
+                    </div>
+                </div>
+                <div class="elf-hat">
+                    <div class="hat-tip"></div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="hero-section">
+        <img src="https://images.unsplash.com/photo-1465101046530-73398c7f28ca?auto=format&fit=crop&w=1200&q=80" alt="Banner" class="banner-image" loading="lazy">
+        <div class="hero-content">
+            <h1>Welcome to My Homepage!</h1>
+            <button class="contact-btn" onclick="alert('Contact form coming soon!')">Contact Me</button>
+        </div>
+    </div>
+    <main class="main-content">
+        <img src="52-129812687-v1-q85w1560cx0cy0cw0ch0h0.png" alt="Additional Image" style="width:100%;max-width:600px;height:auto;display:block;margin:2rem auto 0 auto;border-radius:8px;">
+    </main>
+    <footer class="site-footer">
+        <div class="emoji-row">
+            🌟 ⭐ ✨ 🎉 🎊 🌈 🦄 🎨 🎭 🎪 🎡 🎢 🎠 🎯 🎲 🎮 🎸 🎹 🎤 🎧 🎵 🎶 🎼 🎺 🎻 🥳 🤩 😎 🤗 😄 😊 🙂 😉 😋 🥰 😍 🤖 👾 🎃 🎄 🎁 ⚡ 💫 🔥 💎 💝 💖 💗 💓 💕 🌸 🌺 🌻 🌹 🌷 🌼 🍀 🌿 🌱 🌳 🍃
+        </div>
+    </footer>
 </body>
 </html>
