new weather widget

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to My Homepage</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="weather-widget/styles/weather-widget.css">
 </head>
 <body>
     <header class="site-header">
@@ -34,6 +35,11 @@
         </div>
     </div>
     <main class="main-content">
+        <!-- Weather Widget Section -->
+        <section class="weather-section">
+            <h2>Current Weather</h2>
+            <div id="weatherWidget" class="weather-widget"></div>
+        </section>
         <img src="52-129812687-v1-q85w1560cx0cy0cw0ch0h0.png" alt="Additional Image" style="width:100%;max-width:600px;height:auto;display:block;margin:2rem auto 0 auto;border-radius:8px;">
     </main>
     <footer class="site-footer">
@@ -41,5 +47,14 @@
             🌟 ⭐ ✨ 🎉 🎊 🌈 🦄 🎨 🎭 🎪 🎡 🎢 🎠 🎯 🎲 🎮 🎸 🎹 🎤 🎧 🎵 🎶 🎼 🎺 🎻 🥳 🤩 😎 🤗 😄 😊 🙂 😉 😋 🥰 😍 🤖 👾 🎃 🎄 🎁 ⚡ 💫 🔥 💎 💝 💖 💗 💓 💕 🌸 🌺 🌻 🌹 🌷 🌼 🍀 🌿 🌱 🌳 🍃
         </div>
     </footer>
+    
+    <script src="weather-widget/scripts/weather-widget.js"></script>
+    <script>
+        // Initialize the weather widget when the page loads
+        document.addEventListener('DOMContentLoaded', function() {
+            const widget = new WeatherWidget('weatherWidget');
+            widget.init('London'); // Default city - you can change this
+        });
+    </script>
 </body>
 </html>
