--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <button class="contact-btn" onclick="alert('Contact form coming soon!')">Contact Me</button>
         </div>
     </div>
+    <div class="emoji-banner">
+        <div class="emoji-row">
+            🌟 ⭐ ✨ 🎉 🎊 🌈 🦄 🎨 🎭 🎪 🎡 🎢 🎠 🎯 🎲 🎮 🎸 🎹 🎤 🎧 🎵 🎶 🎼 🎺 🎻 🥳 🤩 😎 🤗 😄 😊 🙂 😉 😋 🥰 😍 🤖 👾 🎃 🎄 🎁 ⚡ 💫 🔥 💎 💝 💖 💗 💓 💕 🌸 🌺 🌻 🌹 🌷 🌼 🍀 🌿 🌱 🌳 🍃
+        </div>
+    </div>
     <main class="main-content">
         <!-- Weather Widget Section -->
         <section class="weather-section">
@@ -22,11 +27,6 @@
         </section>
         <img src="52-129812687-v1-q85w1560cx0cy0cw0ch0h0.png" alt="Additional Image" style="width:100%;max-width:600px;height:auto;display:block;margin:2rem auto 0 auto;border-radius:8px;">
     </main>
-    <footer class="site-footer">
-        <div class="emoji-row">
-            🌟 ⭐ ✨ 🎉 🎊 🌈 🦄 🎨 🎭 🎪 🎡 🎢 🎠 🎯 🎲 🎮 🎸 🎹 🎤 🎧 🎵 🎶 🎼 🎺 🎻 🥳 🤩 😎 🤗 😄 😊 🙂 😉 😋 🥰 😍 🤖 👾 🎃 🎄 🎁 ⚡ 💫 🔥 💎 💝 💖 💗 💓 💕 🌸 🌺 🌻 🌹 🌷 🌼 🍀 🌿 🌱 🌳 🍃
-        </div>
-    </footer>
     
     <script src="weather-widget/scripts/weather-widget.js"></script>
     <script>
